<resources>
    <string name="app_name">Fisherman Handbook</string>
    <string name="slogan_name">Этот справочник поможет вам разобраться в рыбалке и не только.</string>
    <string name="powered_by">Powered by Ilya Sereda</string>
    <string name="first_slide_title">Найди описание рыбы</string>
    <string name="second_slide_title">Узнай полезные советы</string>
    <string name="third_slide_title">Выбери место для рыбалки на карте</string>
    <string name="fourth_slide_title">Открой для себя много нового</string>
    <string name="first_slide_desc">Вы сможете найти точное описание рыбы, её характеристики, где обитает, чем питается и так далее. </string>
    <string name="second_slide_desc">У Вас будет возможность научиться чему-то новому, попробовать половить рыбу по-другому.</string>
    <string name="third_slide_desc">Если Вы захотите поехать на рыбалку, Вам легко будет выбрать водоём, в этом вам поможет карта.</string>
    <string name="fourth_slide_desc">В этом приложении много информации, о которой Вы могли не знать. Кто знает, может она Вам пригодится?</string>
    <string name="skip_btn">Пропустить</string>
    <string name="next_btn">Дальше</string>
    <string name="let_get_started">Давайте начнём!</string>
    <string name="menu_fish">Рыба</string>
    <string name="menu_hooks">Крючки</string>
    <string name="menu_artbait">Приманки</string>
    <string name="menu_bait">Наживка</string>
    <string name="menu_rig">Оснастка</string>
    <string name="menu_lure">Прикормка</string>
    <string name="menu_tips">Cоветы</string>
    <string name="menu_weather">Погода</string>
    <string name="best_fish">Популярная рыба</string>
    <string name="nav_menu">Меню</string>
    <string name="nav_login">Войти в аккаунт</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_logout">Выйти из аккаунта</string>
    <string name="lure_intro">В настоящее время, если не использовать прикормку, то рассчитывать на результативную рыбалку не имеет смысла. Как известно, прикормка может быть покупного или собственного приготовления в домашних условиях. Естественно, что покупные, что готовые сухие смеси стоят денег и немалых. Поэтому не каждый любитель рыбной ловли готов пойти на дополнительные затраты. Исходя из этого, большая часть рыболовов отдает предпочтение прикормке собственного приготовления. Это связано с тем, что на такие деньги можно приготовить гораздо больше прикормки, чем, если купить ее в магазине. При этом если соблюдать технологию приготовления, домашняя прикормка может получиться ничуть не хуже покупной.</string>
    <string name="lure_title_1">Состав любой самодельной прикормки для рыбалки</string>
    <string name="lure_text_1">Любая прикормка для рыбалки, в том числе и собственного приготовления, должна иметь определенную структуру, а не только лишь наличие некоторых ингредиентов. Другими словами, прикормка характеризуется предъявляемыми к ней требованиями.\n<b>Требования являются следующими:</b>\n - прикормка состоит из основной массы;\n - в основную массу должны быть включены кормовые элементы, способные задержать рыбу на одном месте;\n - использование различных добавок, таких, как ароматизаторы и усилители вкуса.\nЕсли рыбалка осуществляется на не большом водоеме, где плотность рыбы достаточно большая, этими требованиями можно пренебречь. В таких условиях достаточно применить обычную кашу. Если это большой водоем, то плотность рыбы может быть не большой, поэтому применение простой каши не будет столь эффективным. Ведь задача приманки заключается в том, чтобы собрать как можно больше рыбы в точке лова. При этом очень важно помнить, что рыбу нужно привлекать, но не кормить. В таком случае, без специальных добавок здесь не обойтись.</string>
    <string name="lure_title_2">Основная масса прикормки</string>
    <string name="lure_text_2">Задача основной массы – создать определенный объем, который способен, кроме всего прочего, привлечь рыбу. Как правило, основу прикормки составляют дешевые составляющие. При этом они должны быть съедобными для рыбы, иначе кормовое пятно отпугнет рыбу. В основную массу могут входить следующие компоненты:\n - комбикорм;\n - макуха;\n - халва;\n - перловка;\n - горох;\n - отруби;\n - жмых;\n - сухари;\n - толокно;\n - пшено и т.д.\n</string>
    <string name="lure_title_3">Кормовые элементы</string>
    <string name="lure_text_3">Назначение кормовых элементов – это удержание рыбы в точке лова длительное время. Если рыба подойдет и не обнаружит определенных элементов корма, то она может тут же покинуть это место и уйти в поисках пищи. Поэтому прикормка должна содержать ингредиенты, интересные для рыбы. В таком случае, она долго сможет находиться в районе лова.\nВ качестве кормовых элементов, способных заинтересовать рыбу, могут быть использованы ингредиенты, как животного, так и растительного происхождения.\nЭто могут быть:\n - выползки; - навозные черви; - опарыши; - мотыль; - кукуруза; - горох; - перловка; - тесто; - пшено; - геркулес и т.д.</string>
    <string name="lure_title_4">Добавки</string>
    <string name="lure_text_4">Особую роль играют ароматические добавки, способные привлечь рыбу с дальнего расстояния. Если этот аромат рыбе нравится, то она приближается к прикормленному месту с одной целью – покушать. В качестве ароматизаторов можно использовать:\n – подсолнечное масло;\n – анисовое масло;\n – конопляное масло;\n – сок чеснока;\n – жареные семечки;\n – сгущенное молоко;\n – йогурт;\n – мед и т.д.</string>
    <string name="lure_title_5">Лучшие рецепты прикормок для рыбы</string>
    <string name="lure_title_6">№1 Прикормка для рыбалки, рецепт</string>
    <string name="lure_text_6">Этот рецепт, состоящий всего из двух составляющих, обладает отличными характеристиками по привлечению рыбы:\n - пшено;\n - жареная измельченная макуха.\nКроме того, что такой состав прикормки действительно способен привлечь рыбу, он еще и дешевый, а так же доступный. Пшено и макуху можно купить на любом продуктовом рынке. На ту сумму денег, которую придется заплатить за пакет готовой прикормки, можно приготовить достаточное количество подобной прикормки. А вот пакета покупной – вряд ли хватит даже на час рыбалки.\nПрикормка готовится следующим образом. Берется кастрюля и в нее наливается вода, после чего она ставится на огонь. После того, как вода закипит, в кастрюлю засыпается пшено. Его должно быть в два раза меньше, чем воды. Варить пшено нужно до тех пор, пока в кастрюле не останется воды вообще. После этого, огонь выключается и в горячую кашу добавляется макуха. Вся смесь тщательно перемешивается до консистенции густого пластилина.\nПрикормка, как правило, готовится с вечера, чтобы на утро, перед отъездом на рыбалку она уже была готова. При этом следует помнить, что консистенция несколько может измениться. В таком случае, возле водоема, в нее следует добавить воды или сухой составляющей, например, той же макухи. Во время приготовления пшена, к нему можно добавить немного сахара, что сделает прикормку более привлекательной для рыбы.</string>
    <string name="lure_title_7">№2 Прикормка для рыбалки, рецепт</string>
    <string name="lure_text_7">Второй рецепт более сложный, поскольку в его состав входит большее количество ингредиентов. Как и первый рецепт, он годится для прикармливания различных видов рыб и является более эффективным.\nЧтобы его приготовить, нужно запастись следующими составляющими:\n - пшено — 300 г;\n - рис — 300 г;\n - панировочные сухари;\n - корица — 1 ч ложка;\n - ванилин — 1,5 пачки;\n - сахар — 150 г;\n - соль — 1ч ложка;\n - молоко сухое — от 1 до 3 столовых ложек;\n - сырые куриные яйца — 2 шт.\nСпособ приготовления. Приготовление прикормки может быть осуществлено как на открытом огне, так и в пароварке. Смесь готовится следующим образом: взять кастрюлю и налить в нее 1 литр воды, после чего туда же добавить сухое молоко, корицу, ванилин, сахар, соль. Все тщательно перемешать и поставить на огонь. Каша варится около 40 минут или до того момента, как испарится вся влага. Примерно за 15 минут до готовности в кашу нужно добавить яйца и так же тщательно перемешать.\nКак только каша сварится, в нее следует добавить панировочные сухари. С помощью сухарей каше придают нужную густоту. Консистенция подбирается в зависимости от условий ловли.</string>
    <string name="weather_title">Погода для удачной рыбалки</string>
    <string name="weather_title_1">Влияние атмосферного давления на клев рыбы</string>
    <string name="weather_text_1">Прежде всего, на поведение рыб оказывает влияние атмосферное давление. Дело в том, что в связи с физиологическими особенностями строения воздушного пузыря рыб разделяют на открыто пузырных и закрыто пузырных. У первой категории рыб пузырь соединен с глоткой – к ним относятся лещ, плотва, карась и другие, у второй (судак, окунь и другие) плавательный пузырь полностью изолирован. При изменении давления в атмосфере меняется давление внутри пузыря.\nОткрыто пузырные рыбы приспособились выравнивать давление, заглатывая воздух с поверхности воды или с растений. Они начинают испытывать голод, как только организм адаптируется к новым условиям.\nЗакрыто пузырные рыбы наиболее болезненно реагируют на скачки давления и в связи с этим могут длительное время не питаться, при повышении давления они поднимаются в верхние слои, а при понижении уходят на глубину.\nТаким образом можно твердо заявить, что наиболее благоприятным атмосферным давлением сказывающимся положительно на лев рыбы является устоявшееся в течении нескольких дней давление. Пускай оно будет 740  или 770 мм. рт. ст., но в течении последних 3-дней. Идеальным же атмосферным давлением считается 760 мм. рт. ст., опять же при условии его сохранении в течении определенного времени.</string>
    <string name="weather_title_2">При какой температуре лучше ловить рыбу</string>
    <string name="weather_text_2">Лучший клев наблюдается во время умеренно теплой погоды с давлением, близким к норме (т. е. 760 мм ртутного столба). Однако если низкое или высокое давление держится устойчиво в течение долгого периода, то клев может слегка оживиться.\nИзменение атмосферного давления тесно связано с изменением ветра. Так, при северных или восточных ветрах давление начинает падать. Вот почему в этот период резко ухудшается клев рыбы. Ухудшается клев и при штормовом ветре любого направления. Лучший клев наблюдается при несильных западном, юго-западном и южном ветрах.</string>
    <string name="weather_title_3">После дождя и клев активнее. Так это или нет?!</string>
    <string name="weather_text_3">После дождей, когда начинает прибывать вода, клев обычно усиливается, затем ухудшается и снова возрастает с началом спада воды. Похолодание и просветление воды летом иногда сказываются на клеве положительно. Лучший клев рыбы наблюдается ранним утром, хороший – вечером, а наиболее слабый – в дневные часы, особенно в жару. В пасмурные дни хороший клев бывает и в дневные часы. Клев улучшается по мере приближения весны или поздней осени, когда рыба клюет на протяжении всего дня.</string>
    <string name="weather_title_4">Время нереста и поведение рыбы — тоже сказывается на клеве?</string>
    <string name="weather_text_4">Особое влияние на поведение рыб оказывают стайные рефлексы в период нереста, большинство из них теряет осторожность и выходит на мелководье, где становится легкой добычей браконьеров. В зависимости от погоды и температуры воды время нереста может сдвигаться в ту или иную сторону.</string>
    <string name="weather_title_5">На что лучше ловить рыбу в зависимости от погоды</string>
    <string name="weather_text_5">Погода влияет и на кормовую базу рыб. Так, с наступлением ранней весны карповые быстрее переходят на растительную пищу. Кроме того, количество появляющихся у воды насекомых, которыми кормится рыба, зависит во многом от того, засушливое лето или нет. В засушливую погоду мелеют водоемы, кормовая база беднеет – рыба отходит от берега и даже совершает дальние миграции в поисках корма.</string>
</resources>