<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".MenuCategories.WeatherCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_btn_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/rus_font"
                android:padding="10dp"
                android:text="@string/menu_weather"
                android:layout_alignParentRight="true"
                android:textAllCaps="true"
                android:textSize="36sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/weather_title"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:fontFamily="@font/subdex_bold"
                        android:textSize="24sp"
                        android:gravity="center_horizontal" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/weather_title" />


                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/weather_title_1"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="21sp"
                    android:fontFamily="@font/subdex_bold"/>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weather_text_1"
                    android:textSize="18sp"/>

                <TextView
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/weather_title_2"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="21sp"
                    android:fontFamily="@font/subdex_bold"/>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weather_text_2"
                    android:textSize="18sp"/>

                <TextView
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/weather_title_3"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="21sp"
                    android:fontFamily="@font/subdex_bold"/>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weather_text_3"
                    android:textSize="18sp"/>

                <TextView
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/weather_title_4"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="21sp"
                    android:fontFamily="@font/subdex_bold"/>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weather_text_4"
                    android:textSize="18sp"/>

                <TextView
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/weather_title_5"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="21sp"
                    android:fontFamily="@font/subdex_bold"/>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/weather_text_5"
                    android:textSize="18sp"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>