<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".MenuCategories.FishCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/rus_font"
                android:padding="10dp"
                android:text="@string/menu_lure"
                android:layout_alignParentRight="true"
                android:textAllCaps="true"
                android:textSize="36sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <RelativeLayout
                        android:id="@+id/lure_card"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <ImageView
                            android:background="@color/banner_background"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/prikormka" />


                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_intro"
                    android:textSize="18sp"/>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_1"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="22sp"
                    android:gravity="center_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/prikormka_1" />


                    </RelativeLayout>

                </RelativeLayout>
                
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/lure_text_1"/>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_2"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/lure_text_2"/>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_3"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/lure_text_3"/>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_4"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/lure_text_4"/>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_5"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="22sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_6"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/prikormka_2" />


                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/lure_text_6"/>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lure_title_7"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/subdex_bold"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/prikormka_3" />


                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/lure_text_7"/>




            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>